// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json bin > should patch binary directive > cjs output 1`] = `
"#!/usr/bin/env node
'use strict';

console.log("Hello, world!");
"
`;

exports[`packem package.json bin > should work with bin as .cts extension > cjs output 1`] = `
"#!/usr/bin/env node
'use strict';

const require$$0 = require('path');

const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const require$$0__default = /*#__PURE__*/_interopDefaultCompat(require$$0);

var bin = {};

const path = require$$0__default;
console.log(path.basename(__filename));

module.exports = bin;
"
`;

exports[`packem package.json bin > should work with bin as .mts extension > mjs output 1`] = `
"#!/usr/bin/env node
console.log("Hello, world!");
"
`;

exports[`packem package.json bin > should work with bin as multi path > cjs output 1`] = `
"#!/usr/bin/env node
'use strict';

console.log("a");
"
`;

exports[`packem package.json bin > should work with bin as multi path > cjs output 2`] = `
"#!/usr/bin/env node
'use strict';

console.log("b");
"
`;
